define media object components

--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -301,7 +301,7 @@ a {
   background: #02cdf1;
 }
 
-/* Plan */
+/* Plan & Popular Badge */
 
 .plan__name {
   color: #fff;
@@ -360,4 +360,22 @@ a {
   .plan__description {
     font-size: 1.7rem;
   }
+}
+
+/* Media Object */
+
+.media {
+  display: flex;
+}
+
+.media__title {
+  margin-top: 0;
+}
+
+.media__body {
+  margin: 0 2rem;
+}
+
+.media__image {
+  margin-top: 1rem;
 }
